--- a/client_QT/IOT/mainwindow/mainwindow.ui
+++ b/client_QT/IOT/mainwindow/mainwindow.ui
@@ -47,6 +47,32 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="pb_cmd1">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>350</y>
+      <width>141</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OpenLed</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pb_cmd2">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>350</y>
+      <width>141</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OffLed</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -54,7 +80,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>24</height>
+     <height>43</height>
     </rect>
    </property>
   </widget>
